Kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: <NAME>
spec:
  selector:
    app: <NAME>
  ports:
    - protocol: TCP
      port: <CONTAINER_PORT>
      targetPort: <CONTAINER_PORT>
